opam-version: "2.0"
version: "2.0.0"
synopsis: "An alternative to xdvi with special support for WhizzyTeX"
description: """
Active-DVI is a DVI previewer and presenter written in OCaml with some eye
candy effects for presentation, support for interactive demonstrations, and
embedding of arbitrary applications within the presentation.

Active-DVI is well suited for use in combination with WhizzyTeX
(http://cristal.inria.fr/whizzytex/)
"""
maintainer: ["Didier Rémy <Didier.Remy@inria.fr>"]
authors: [
  "Alexandre Miquel"
  "Jun Furuse"
  "Didier Rémy"
  "Pierre Weis"
  "Xavier Leroy"
  "Roberto Di Cosmo"
  "Didier Le Botlan"
  "Alan Schmitt"
]
license: "LGPL-2.1-or-later"
homepage: "http://advi.inria.fr"
dev-repo: "git+https://github.com/diremy/advi.git"
doc: "http://advi.inria.fr"
bug-reports: "Didier.Remy@inria.fr"
depends: [
  "ocaml" {>= "4.11.1"}
  "dune" {>= "2.5"}
  "graphics" {>= "5.1.1"}
  "camlimages" {>= "5.0.4"}
  "conf-texlive" {build}
  "conf-ghostscript" {build}
  "conf-which" {build}
]
build: [
  ["dune" "subst"] {dev}
  [ make ]
]
install: [ make "install" ]
post-messages: [
"This only installed the 'advi' command.  To benefit from advanced features
of advi you also need to install additional latex source files.  To see how
to do so, run the command 'advi-latex-files --install help'.  "
]
