(rule
  (target splash.dvi)
  (deps (:src splash.tex) (:rc latexmk.rc)
        manual.sty
        manual.sty
        (glob_files *.tex)
        (glob_files ../tex/*.sty)
        (glob_files ../tex/*.eps)
  )
  (action
   (setenv TEXINPUTS .:../tex::
    (run latexmk -silent -dvi %{src})))
  )

(rule
  (target manual.ps)
  (deps (:src manual.tex) (:rc latexmk.rc) 
        manual.sty
        (glob_files *.tex)
        (glob_files ../tex/*.sty)
        (glob_files ../tex/*.eps)
  )
  (action
   (setenv TEXINPUTS .:../tex::
    (run latexmk -silent -ps %{src})))
  )

(rule
 (target manual.pdf)
 (deps (:src manual.ps))
 (action (run ps2pdf %{src}))
 )





;; (rule
;;   (target manual.html)
;;   (deps (:src manual.tex) manual.pdf
;;         manual.hva macros.hva
;;         (glob_files *.tex)
;;         (glob_files ../tex/*.sty)
;;         (glob_files ../tex/*.eps)
;;   )
;;   (action (run hevea -entities -I . -I ../tex -fix ./macros.hva %{src}))
;;   )

(install
  (section doc)
  (files splash.dvi manual.pdf))

